--- a/index.html
+++ b/index.html
@@ -467,75 +467,112 @@
             </li>
           </ul>
         </div>
+
+        <div class="subscribe-form-wrapper">
+          <p class="subscribe-text">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="subscribe-label">
+              <input
+                class="subscribe-input"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+              />
+            </label>
+
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="icon-send" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
     <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-btn">
-          <svg class="modal-btn-close" width="24" height="24">
-            <use href="images/icons.svg#icon-close"></use>
+          <svg class="modal-btn-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <div class="modal-field">
-            <label for="name" class="modal-label">Name</label>
+          <div class="modal-field-input">
+            <label for="user-name" class="modal-label">Name</label>
             <div class="input-wrapper">
-              <input type="text" class="modal-input" id="name" name="name" />
+              <input
+                type="text"
+                class="modal-input"
+                id="user-name"
+                name="user-name"
+              />
               <svg class="input-icon" width="18" height="24">
-                <use href="images/icons.svg#icon-person-black"></use>
+                <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label for="phone" class="modal-label">Phone</label>
+          <div class="modal-field-input">
+            <label for="user-phone" class="modal-label">Phone</label>
             <div class="input-wrapper">
-              <input type="phone" class="modal-input" id="phone" name="phone" />
+              <input
+                type="tel"
+                class="modal-input"
+                id="user-phone"
+                name="user-phone"
+              />
               <svg class="input-icon" width="18" height="24">
-                <use href="images/icons.svg#icon-phone-black"></use>
+                <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label for="email" class="modal-label">Email</label>
+          <div class="modal-field-input">
+            <label for="user-email" class="modal-label">Email</label>
             <div class="input-wrapper">
-              <input type="email" class="modal-input" id="email" name="email" />
+              <input
+                type="email"
+                class="modal-input"
+                id="user-email"
+                name="user-email"
+                value=""
+              />
               <svg class="input-icon" width="18" height="24">
-                <use href="images/icons.svg#icon-email-black"></use>
+                <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label for="comment" class="modal-label">Comment</label>
+          <div class="modal-field-textarea">
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
-              name="comment"
-              id="comment"
+              class="modal-textarea"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
               cols="30"
               rows="10"
-              class="modal-textarea"
             ></textarea>
           </div>
-          <div class="modal-field">
+          <div class="modal-field-checkbox">
             <input
               type="checkbox"
-              name="privacy-policy"
-              id="privacy-policy"
+              name="user-privacy"
+              id="user-privacy"
               class="modal-checkbox visually-hidden"
+              value="true"
             />
-            <label
-              class="checkbox-label"
-              for="privacy-policy"
-              class="modal-label"
+            <label class="checkbox-label" for="user-privacy"
               ><span class="modal-label-box">
-                <svg class="checkbox-icon" width="16" height="16">
-                  <use href="images/icons.svg#checked"></use>
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#checked"></use>
                 </svg> </span
               >I accept the terms and conditions of the
               <a href="/" class="checkbox-label-link">Privacy Policy</a></label
             >
           </div>
+          <button type="submit" class="submit-btn">Send</button>
         </form>
       </div>
     </div>
