--- a/index.html
+++ b/index.html
@@ -566,8 +566,7 @@
             <label class="checkbox-label" for="user-privacy"
               ><span class="modal-label-box">
                 <svg class="checkbox-icon" width="10" height="8">
-                  <use href="./images/icons.svg#checked"></use>
-                </svg> </span
+                  <use href="./images/icons.svg#checked"></use></svg></span
               >I accept the terms and conditions of the
               <a href="/" class="checkbox-label-link">Privacy Policy</a></label
             >
