add aria-label for label

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <div class="subscribe-form-wrapper">
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form">
-            <label class="subscribe-label">
+            <label class="subscribe-label" aria-label="subscribe input">
               <input
                 class="subscribe-input"
                 type="email"
