--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >
           <ul class="menu list">
             <li class="menu-item">
-              <a class="menu-link menu-first-link link" href="/">Studio</a>
+              <a class="menu-link current link" href="/">Studio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="">Portfolio</a>
@@ -492,7 +492,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-close" width="8" height="8">
